[project]
name = "rag-agent-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=1.3.7",
    "datasets>=4.4.1",
    "faiss-cpu>=1.13.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.1.12",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
]
